@@ -1435,7 +1435,7 @@
 			      <child>
 				<widget class="GtkRadioMenuItem" id="indent_width_1">
 				  <property name="visible">True</property>
-				  <property name="label" translatable="yes">_1</property>
+				  <property name="label">_1</property>
 				  <property name="use_underline">True</property>
 				  <property name="active">True</property>
 				  <signal name="activate" handler="on_indent_width_activate" last_modification_time="Tue, 14 Sep 2010 15:03:11 GMT"/>
@@ -1445,7 +1445,7 @@
 			      <child>
 				<widget class="GtkRadioMenuItem" id="indent_width_2">
 				  <property name="visible">True</property>
-				  <property name="label" translatable="yes">_2</property>
+				  <property name="label">_2</property>
 				  <property name="use_underline">True</property>
 				  <property name="active">True</property>
 				  <property name="group">indent_width_1</property>
@@ -1456,7 +1456,7 @@
 			      <child>
 				<widget class="GtkRadioMenuItem" id="indent_width_3">
 				  <property name="visible">True</property>
-				  <property name="label" translatable="yes">_3</property>
+				  <property name="label">_3</property>
 				  <property name="use_underline">True</property>
 				  <property name="active">True</property>
 				  <property name="group">indent_width_1</property>
@@ -1467,7 +1467,7 @@
 			      <child>
 				<widget class="GtkRadioMenuItem" id="indent_width_4">
 				  <property name="visible">True</property>
-				  <property name="label" translatable="yes">_4</property>
+				  <property name="label">_4</property>
 				  <property name="use_underline">True</property>
 				  <property name="active">True</property>
 				  <property name="group">indent_width_1</property>
@@ -1478,7 +1478,7 @@
 			      <child>
 				<widget class="GtkRadioMenuItem" id="indent_width_5">
 				  <property name="visible">True</property>
-				  <property name="label" translatable="yes">_5</property>
+				  <property name="label">_5</property>
 				  <property name="use_underline">True</property>
 				  <property name="active">True</property>
 				  <property name="group">indent_width_1</property>
@@ -1489,7 +1489,7 @@
 			      <child>
 				<widget class="GtkRadioMenuItem" id="indent_width_6">
 				  <property name="visible">True</property>
-				  <property name="label" translatable="yes">_6</property>
+				  <property name="label">_6</property>
 				  <property name="use_underline">True</property>
 				  <property name="active">True</property>
 				  <property name="group">indent_width_1</property>
@@ -1500,7 +1500,7 @@
 			      <child>
 				<widget class="GtkRadioMenuItem" id="indent_width_7">
 				  <property name="visible">True</property>
-				  <property name="label" translatable="yes">_7</property>
+				  <property name="label">_7</property>
 				  <property name="use_underline">True</property>
 				  <property name="active">True</property>
 				  <property name="group">indent_width_1</property>
@@ -1511,7 +1511,7 @@
 			      <child>
 				<widget class="GtkRadioMenuItem" id="indent_width_8">
 				  <property name="visible">True</property>
-				  <property name="label" translatable="yes">_8</property>
+				  <property name="label">_8</property>
 				  <property name="use_underline">True</property>
 				  <property name="active">True</property>
 				  <property name="group">indent_width_1</property>
